--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "express": "^4.14.0",
     "formidable": "^1.0.17"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
