--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^4.14.0",
-    "formidable": "^1.0.17"
+    "formidable": "^1.0.17",
+    "mysql": "^2.17.1"
   },
   "scripts": {
     "start": "node app.js"
